objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>testImg__c</fullName>
        <label>testImg</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HollyWood</fullName>
                </value>
                <value>
                    <fullName>BollyWood</fullName>
                </value>
                <value>
                    <fullName>TollyWood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageRating__c</fullName>
        <label>AverageRating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_in_Min__c</fullName>
        <label>Duration in Min</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>